@@ -1,3 +1,9 @@
+Wed Sep  2 16:25:00 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
+
+        * run_tests.pl:
+
+          Updated the programming style.
+
 Wed Sep  2 16:19:56 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
 
         * README:
